--- a/AI_chatbot/pubspec.yaml
+++ b/AI_chatbot/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   get: ^4.6.5
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0 
+  intl: 
   path_provider: ^2.1.1
 
 dev_dependencies:
