--- a/AI_chatbot/ios/Flutter/Generated.xcconfig
+++ b/AI_chatbot/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Soft\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Marcelo\Desktop\prograMovil\AI_chatbot
+FLUTTER_ROOT=C:\Users\wadia\Proyectos\FlutterSDK\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\wadia\Proyectos\PrograMovil\proyecto\prograMovil\AI_chatbot
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
