--- a/AI_chatbot/pubspec.yaml
+++ b/AI_chatbot/pubspec.yaml
@@ -30,3 +30,4 @@ flutter:
     - assets/jsons/preferencias_usuario.json
     - assets/jsons/conversaciones.json
     - assets/jsons/mensajes.json
+    - assets/images/logo.png
