--- a/AI_chatbot/pubspec.yaml
+++ b/AI_chatbot/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   dio: ^5.4.0
+  flutter_markdown: ^0.6.18
 
 dev_dependencies:
   flutter_test:
