--- a/AI_chatbot/android/local.properties
+++ b/AI_chatbot/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Sebastian\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\Sebastian\\Desktop\\flutter\\flutter
+sdk.dir=C:\\Users\\wadia\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\wadia\\Proyectos\\FlutterSDK\\flutter
 =======
 flutter.buildMode=debug
 flutter.versionName=1.0.0
